- Added achievements! You can look at the achievements in `g*tokens`, and they'll get you tokens when you complete them!
- Help command now has announcements! How cool right?

- Fixed stucking you into games if they have errors returning messages...
- Fixed things not saving
- Fixed the DM Message always being in the bottom of Hangman

Enjoy! ~ deprilula28