@@ -6,7 +6,7 @@
 
     <groupId>me.deprilula28</groupId>
     <artifactId>gamesrob</artifactId>
-    <version>1.6.2</version>
+    <version>1.6.3</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
