@@ -32,7 +32,7 @@ public class GamesROB {
     public static final long UP_SINCE = System.currentTimeMillis();
     private static final int MAJOR = 1;
     private static final int MINOR = 6;
-    private static final int PATCH = 2;
+    private static final int PATCH = 3;
     public static final String VERSION = String.format("%s.%s.%s", MAJOR, MINOR, PATCH);
 
     public static Optional<DiscordBotsOrg> dboAPI = Optional.empty();
